
Revision 0.0.3, released XX-04-2020
-----------------------------------

- Rebuild SNMP simulator invocation script only on Lab power state
  change for performance reasons. Prior to this change, invocation
  script has been generated on every change in the DB. This was
  causing unnecessary SNMP simulator restarts and REST API server
  slowness.
- Add tox runner with some basic jobs.
- Fix SQL/ORM problem in SNMP Simulator invocation script generation that
  manifested itself as extreme slowness with the increasing number of powered
  on labs.

Revision 0.0.2, released 08-02-2020
-----------------------------------

- Added SNMP simulator processes runtime metrics collection by the
  `supervisor` process. Gathered information is stored in the DB
  and served via newly introduced REST API endpoints.

Revision 0.0.1, released 14-01-2020
-----------------------------------

- Added `PUT /snmpsim/mgmt/v1/recordings/<recording>` endpoint which (unlike
  POST) will create new or override existing recording.
- When creating new recordings, also create all directories leading to the
  recording being created. When recording is deleted, try to also remove
  its directory if it's empty.
- Fixed WSGI servers default config initialization.
- When failing to create/override a recording, return HTTP code 490 instead
  of 404.
- Added example systemd unit files for all control panel components.
- Renamed REST API specs into `snmpsimd-mgmt` and `snmpsim-metrics` on Swagger
  and moved spec files into specs folder.
- Removed SQL cascading from all management API models. That makes SNMP
  simulator entities less dependent from each other when deleting some
  of them what facilitates their reuse.
- Added a new feature of tagging to Management API. Every Management API object
  can be tagged with zero or more tags. The REST API client can then obtain
  all tagged objects at once searching by tag.

Revision 0.0.0, released 01-01-2020
-----------------------------------
